.provarCaches/00D6C0000000xA6UAI/objects/sked__Job_Task__c.object
<CustomObject>
    <fields>
        <fullName>sked__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Job__c</fullName>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Job Tasks</relationshipLabel>
        <relationshipName>Job_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Seq__c</fullName>
        <label>Seq</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job Task</label>
    <nameField>
        <label>Job Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>